[project]
name = "comfyui-negpip-zimage"
description = "Standalone NegPiP negative prompt weighting for Z-Image and Z-Image Turbo in ComfyUI."
version = "1.2.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/cyberdeliaAI/ComfyUI-NegPiP-ZImage"

[tool.comfy]
PublisherId = "cyberdelia"
DisplayName = "NegPiP for Z-Image"
Icon = "https://raw.githubusercontent.com/cyberdeliaAI/ComfyUI-NegPiP-ZImage/main/assets/icon.png"