[project]
name = "comfyui-negpip-zimage"
description = "One-node NegPiP prompting for Z-Image, SD1, SDXL, and Anima in ComfyUI."
version = "2.0.1"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/cyberdeliaAI/comfyui-negpip-zimage"

[tool.comfy]
PublisherId = "cyberdelia"
DisplayName = "NegPiP Prompt (Multi-Model)"
Icon = "https://raw.githubusercontent.com/cyberdeliaAI/comfyui-negpip-zimage/main/assets/icon.png"
